--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+@import "tw-animate-css";
+
+@custom-variant dark (&:is(.dark *));
 
 @theme {
   --color-primary: #81c3d7ff;
@@ -10,4 +13,120 @@
 
 * {
   font-family: "Inter"
+}
+
+@theme inline {
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
+}
+
+:root {
+  --radius: 0.625rem;
+  --background: #d9dcd6;
+  --foreground: #16425b;
+  --card: #d9dcd6;
+  --card-foreground: #16425b;
+  --popover: #d9dcd6;
+  --popover-foreground: #16425b;
+  --primary: #81c3d7;
+  --primary-foreground: #16425b;
+  --secondary: #2f6690;
+  --secondary-foreground: #d9dcd6;
+  --muted: #3a7ca5;
+  --muted-foreground: #d9dcd6;
+  --accent: #16425b;
+  --accent-foreground: #d9dcd6;
+  --destructive: #ef4444;
+  --border: #3a7ca5;
+  --input: #3a7ca5;
+  --ring: #81c3d7;
+  --chart-1: #81c3d7;
+  --chart-2: #3a7ca5;
+  --chart-3: #2f6690;
+  --chart-4: #16425b;
+  --chart-5: #d9dcd6;
+  --sidebar: #d9dcd6;
+  --sidebar-foreground: #16425b;
+  --sidebar-primary: #81c3d7;
+  --sidebar-primary-foreground: #16425b;
+  --sidebar-accent: #16425b;
+  --sidebar-accent-foreground: #d9dcd6;
+  --sidebar-border: #3a7ca5;
+  --sidebar-ring: #81c3d7;
+}
+
+.dark {
+  --background: #16425b;
+  --foreground: #d9dcd6;
+  --card: #2f6690;
+  --card-foreground: #d9dcd6;
+  --popover: #2f6690;
+  --popover-foreground: #d9dcd6;
+  --primary: #81c3d7;
+  --primary-foreground: #16425b;
+  --secondary: #3a7ca5;
+  --secondary-foreground: #d9dcd6;
+  --muted: #2f6690;
+  --muted-foreground: #d9dcd6;
+  --accent: #81c3d7;
+  --accent-foreground: #16425b;
+  --destructive: #ef4444;
+  --border: #3a7ca5;
+  --input: #3a7ca5;
+  --ring: #81c3d7;
+  --chart-1: #81c3d7;
+  --chart-2: #3a7ca5;
+  --chart-3: #2f6690;
+  --chart-4: #16425b;
+  --chart-5: #d9dcd6;
+  --sidebar: #2f6690;
+  --sidebar-foreground: #d9dcd6;
+  --sidebar-primary: #81c3d7;
+  --sidebar-primary-foreground: #16425b;
+  --sidebar-accent: #3a7ca5;
+  --sidebar-accent-foreground: #d9dcd6;
+  --sidebar-border: #3a7ca5;
+  --sidebar-ring: #81c3d7;
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
